--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
   - "nightly"
 install:
   - pip install -r requirements.txt
-  - pip install pycodestyle isort pylint yapf
+  - pip install pycodestyle 'isort < 5.0' pylint yapf
 script:
   - isort --diff --check --recursive sshpubkeys tests
   - pycodestyle --ignore E501,E402 --exclude=.git,dev3 sshpubkeys tests
